amyc/src/test/resources/amyc/parser/failing/UnaryWithinUnary.grading.amy
object Unary
  --x
end Unary
